[package]
name = "async-test"
version = "0.1.0"
authors = ["Kunihiro Ishiguro <ishi@hash-set.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "=0.2.0-alpha.5"
futures = { version = "0.3.1"}
runtime = "0.0.0"
