[package]
name = "async-test"
version = "0.1.0"
authors = ["Kunihiro Ishiguro <ishi@hash-set.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
futures = "0.3.4"
failure = "0.1.6"
bytes = "0.5.4"
mio = "0.6.21"
